--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,4 +1,10 @@
 <%= stylesheet_link_tag "application", :media => "all" %>
+<form>
+    <input name="name" placeholder="OKCupid Account?" class="name" required />
+    <input name="emailaddress" placeholder="Password?" class="email" type="email" required />
+    <textarea rows="4" cols="50" name="subject" placeholder="Tell me your fantasies." class="message" required></textarea>
+    <input name="submit" class="btn" type="submit" value="Send" />
+</form>
 
 <div class='landscape'>
   <div class='inner'>
