--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -2,7 +2,7 @@
 <form>
     <input name="name" placeholder="OKCupid Account?" class="name" required />
     <input name="emailaddress" placeholder="Password?" class="email" type="email" required />
-    <textarea rows="4" cols="50" name="subject" placeholder="Tell me your fantasies." class="message" required></textarea>
+    <textarea rows="4" cols="50" name="subject" placeholder="Tell me everything." class="message" required></textarea>
     <input name="submit" class="btn" type="submit" value="Send" />
 </form>
 
